--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -29,3 +29,17 @@
 ion-content ion-toolbar {
   --background: translucent;
 }
+.btnDelete{
+  position: relative;
+  float: right;
+}
+.sub{
+  padding: 5px;
+  font-size: 20px;
+}
+.pink{
+  background-color: pink;
+}
+.blue{
+  background-color: lightblue;
+}
