--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,77 @@
 <ion-header translucent>
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="dark">
+        <ion-title>
+            Agregar Contacto
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <div id="">
+        <ion-item>
+            <ion-label position="floating">Nombre Completo:</ion-label>
+            <ion-input #nombre [(ngModel)]="myService.htmlNombre"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">Telefono:</ion-label>
+            <ion-input #telefono [(ngModel)]="myService.htmlTelefono"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">Correo:</ion-label>
+            <ion-input #correo [(ngModel)]="myService.htmlCorreo"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">Notas:</ion-label>
+            <ion-input #notas [(ngModel)]="myService.htmlNotas"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">Fecha de Nacimiento:</ion-label>
+            <ion-datetime displayFormat="DD/MMM/YYYY" placeholder="DD/MMM/YYYY" #fecha [(ngModel)]="myService.htmlFecha"></ion-datetime>
+        </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+        <ion-radio-group (ionChange)="myService.cambioSexo($event)">
+            <ion-list-header style="font-size: 15px;">Selecciona el genero: </ion-list-header>
+            <ion-item lines="none">
+                <ion-label>Masculino</ion-label>
+                <ion-radio slot="start" color="primary" value="hombre"></ion-radio>
+            </ion-item>
+            <ion-item lines="none">
+                <ion-label>Femenino</ion-label>
+                <ion-radio slot="start" color="primary" value="mujer"></ion-radio>
+            </ion-item>
+        </ion-radio-group>
+
+        <ion-button (click)="myService.addPerson(nombre.value,telefono.value,correo.value,notas.value)" expand="block">
+            <ion-icon name="add-circle-outline"></ion-icon>
+        </ion-button>
+    </div>
+
+
+
+    <div *ngIf="myService.arrPersonas.length === 0">
+        <h3>No se han agreado contactos</h3>
+    </div>
+    <div *ngIf="myService.arrPersonas.length !== 0">
+        <h2>Mis contactos</h2>
+        <ion-item>
+            <ion-label>Ver notas</ion-label>
+            <ion-toggle slot="end" color="light" (ionChange)="myService.showNote()"></ion-toggle>
+        </ion-item>
+
+        <ion-card *ngFor="let item of myService.arrPersonas" [ngClass]="{'blue':item.strSexo == 'hombre','pink': item.strSexo=='mujer'}">
+            <ion-card-header>
+                <ion-card-title>{{item.strNombre}}</ion-card-title>
+                <ion-card-subtitle>{{item.strCorreo}}</ion-card-subtitle>
+                <ion-card-subtitle>{{item.strTelefono}}</ion-card-subtitle>
+                <ion-card-subtitle>{{item.strSexo}}</ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content>{{item.strEmail}}</ion-card-content>
+            <ion-item>
+                <ion-card-content id="notas" *ngIf="myService.blnNotas" slot="start">{{item.strNotas}}</ion-card-content>
+                <ion-button color="danger" slot="end" (click)="myService.presentAlertConfirm(this.item,this.item.strNombre)">
+                    <ion-icon name="close"></ion-icon>
+                </ion-button>
+            </ion-item>
+        </ion-card>
+    </div>
 </ion-content>
