--- a/src/app/components/my-component/my-component.component.html
+++ b/src/app/components/my-component/my-component.component.html
@@ -1,3 +1,27 @@
-<p>
-  my-component works!
-</p>
+<div *ngIf="myService.arrPersonas.length === 0">
+    <h3>No se han agreado contactos</h3>
+</div>
+<div *ngIf="myService.arrPersonas.length !== 0">
+    <h2>Mis contactos</h2>
+    <ion-item>
+        <ion-label>Ver notas</ion-label>
+        <ion-toggle slot="end" color="light" (ionChange)="myService.showNote()"></ion-toggle>
+    </ion-item>
+
+    <ion-card *ngFor="let item of myService.arrPersonas" [ngClass]="{'blue':item.strSexo == 'hombre','pink': item.strSexo=='mujer'}">
+        <ion-card-header>
+            <ion-card-title>Nombre: {{item.strNombre}}</ion-card-title>
+            <ion-card-subtitle>Correo: {{item.strCorreo}}</ion-card-subtitle>
+            <ion-card-subtitle>Telefono: {{item.strTelefono}}</ion-card-subtitle>
+            <ion-card-subtitle>Sexo: {{item.strSexo}}</ion-card-subtitle>
+            <ion-card-subtitle>Nacido el {{item.dteFecha|date}}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>{{item.strEmail}}</ion-card-content>
+        <ion-item>
+            <ion-card-content id="notas" *ngIf="myService.blnNotas" slot="start">{{item.strNotas}}</ion-card-content>
+            <ion-button color="danger" slot="end" (click)="myService.presentAlertConfirm(this.item,this.item.strNombre)">
+                <ion-icon name="close"></ion-icon>
+            </ion-button>
+        </ion-item>
+    </ion-card>
+</div>
